# courier

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yaml
.github/workflows/: pipeline.yml
src/: config.rs  discord.rs  email.rs  main.rs
