[package]
name = "the_messenger"
version = "0.1.0"
edition = "2021"


[dependencies]
rustls = "0.21.7"
mail-parser = "0.9.1"
serde_json = "1.0.107"
toml = "0.8.2"

[dependencies.imap]
version = "3.0.0-alpha.11"
default-features = false
features = ["rustls-tls"]

[dependencies.reqwest]
version = "0.11.22"
default-features = true
features = ["json", "multipart"]

[dependencies.tokio]
version = "1.32.0"
features = ["full"]

[dependencies.serde]
version = "1.0.188"
features = ["derive"]